tests/errors/calls/overload-no-conversion.fn
---
Description: No matching overload because bool has no implicit cast to f32
Expected: FN3201
---

type Program
{
    static fn Process(x: f32) {}

    static fn Main -> i32
    {
        Process(true)
        return 0
    }
}
